--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html >
+<html>
 
 <head>
   <meta charset="UTF-8">
   <title>Safe URL</title>
+  <link rel="stylesheet" href="static/style.css">
+  <style>
 
+
+
+  </style>
 </head>
 
 <body>
- <div class="login">
+<div class="cover">
 	<h1>SAFE URL</h1>
-     <h3> Enter a URL</h3>
-
+    <h4>Enter a URL to check if it is safe, unsafe, or non-existent.</h4>
      <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}"method="post">
-    	<input type="text" name="url" placeholder="url"  />
-
-        <button type="submit" class="btn">Predict</button>
+    <form action='predict' method="post" class="flex-form">
+    	<input type="search" name="url" placeholder="Enter URL"  required/>
+        <br>
+        <button type="submit">Check</button>
     </form>
 
-   <br>
-   <br>
-   {{ prediction_text }}
-
+     <br>
+     <br>
+   <h2>URL Status: {{ prediction_text }}</h2>
  </div>
+
 
 
 </body>
